--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "14.5.0",
     "npm": "6.14.5"
     },
-  "proxy": "https://api.cloudinary.com",
+  "proxy": "https://studiofy-django.herokuapp.com",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
